--- a/styles2.css
+++ b/styles2.css
@@ -34,7 +34,7 @@ body {
   z-index: 1000;
   width: 100%;
   height: 80px;
-  letter-spacing: -3px;
+  letter-spacing: -2px;
   border-bottom: 0.3px solid #000;
   align-items: center;
   justify-content: center;
@@ -54,7 +54,7 @@ body {
 .navbar ul a {
   text-decoration: none;
   color: black; 
-  font-size: 40px; 
+  font-size: 20px; 
 }
 
 /* ----------------------- Main ----------------------- */
@@ -134,6 +134,7 @@ table {
   font-family: "Instrument Sans", sans-serif;
   font-weight: 440;
   border: 0.2px solid #000;
+  margin-top: 15px;
 }
 
 thead {
@@ -180,4 +181,17 @@ td:first-child {
       padding: 10px;
       font-size: 14px;
   }
+}
+
+#visuals {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#visuals img {
+  width: 100%;
+  height: auto;
+  border:#000 0.4px solid;
 }
