--- a/styles2.css
+++ b/styles2.css
@@ -122,7 +122,7 @@ main p {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 table {
@@ -194,4 +194,21 @@ td:first-child {
   width: 100%;
   height: auto;
   border:#000 0.4px solid;
+}
+
+#redesign img {
+  margin-right: 10px;
+  margin-left: 10px;
+  height: 850px;
+  width: auto;
+  border: #000 0.4px solid;
+  color: #000;
+}
+
+#redesign {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
