--- a/styles2.css
+++ b/styles2.css
@@ -199,7 +199,7 @@ td:first-child {
 #redesign img {
   margin-right: 10px;
   margin-left: 10px;
-  height: 850px;
+  height: 680px;
   width: auto;
   border: #000 0.4px solid;
   color: #000;
@@ -211,4 +211,17 @@ td:first-child {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #f4f4f4;
+  color: rgb(0, 0, 0);
+  width: 100%;
+  height: 50px;
+  margin-top: 30px;
+  border-top: 0.2px solid #000;
 }
