--- a/styles.css
+++ b/styles.css
@@ -2,206 +2,226 @@
 body {
   font-family: Instrument Sans, sans-serif;
   margin: 0;
-  text-align: center;
   font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffffff;
+  text-align: center;
 }
 
-body h1 {
-  padding-top: 10px;
-}
+/* ----------------------- Header ----------------------- */
 
 .header {
-  position: relative;
   height: auto;
-  margin: 20px 0;
+  margin: 0;
+  margin-top: 30px;
   z-index: 1;
   font-family: "Instrument Sans", sans-serif;
   font-weight: 440;
-  font-size: 80px;
+  font-size: 70px;
   display: block;
-  line-height: 70px;
+  line-height: 60px;
   letter-spacing: -3px;
   text-align: center;
 }
 
-/* ----------------------- Sidebar ----------------------- */
-.sidebar {
-  position: fixed;
-  height: 100vh;
-  width: 100px;
-  z-index: 1000;
+/* ----------------------- Navbar ----------------------- */
+.navbar {
+  position: sticky;
   display: flex;
-  flex-direction: column;
+  z-index: 1000;
+  width: 100%;
+  height: 80px;
+  letter-spacing: -2px;
+  border-bottom: 0.3px solid #000;
   align-items: center;
   justify-content: center;
-  margin-top:-100px;
+  background-color: #ffffff;
 }
 
-.sidebar ul {
+.navbar ul {
+  margin: 0; 
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   list-style-type: none;
+  width: 70%;
 }
 
-.sidebar li {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.sidebar li a {
-  color: #000;
+.navbar ul a {
   text-decoration: none;
-  font-size: 100px;
-  display: block;
+  color: black; 
+  font-size: 20px; 
 }
 
 /* ----------------------- Main ----------------------- */
+
 main {
-  margin-left: 160px;
-  width: calc(100% - 160px);
+  padding-left: 100px;
+  padding-right: 100px; 
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.info {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  width: 100%;
-  font-size: 13px; 
-  margin-top:-5px;
-}
-
-#rectangle {
-  position: fixed;
-  border-right: 1px solid #000;
-  width: 160px;
-  background-color: #fff;
-  height: 100vh;
-  z-index: 100;
-  margin-top:-20px;
-}
-
-section {
-  position: relative;
-  width: 100%;
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-section h2 {
-  font-style: italic;
-  font-size: 40px;
-  font-weight: 440;
-  letter-spacing: -3px;
-  margin-bottom: 10px;
-}
-
-section h3 {
-  font-style: italic;
-  font-size: 30px;
-  font-weight: 440;
-  letter-spacing: -3px;
-}
-
-section h4 {
-  max-width: 1000px;
-  font-weight: 300;
-  text-align: center;
-  margin: 0 auto;
-}
-
-section p {
-  width: 80%;
-  font-weight: 300;
-  font-size: 12px;
   text-align: justify;
   text-align-last: center;
-  margin: 0 auto;
-  max-width:900px;
+  align-items: center;
+  justify-content: center;
+  width: 70%; 
+  font-size: 14px; 
 }
 
-section a {
-  color: #000;
+main h2 {
+  font-family: "Instrument Sans", sans-serif;
+  font-weight: 440;
+  font-size: 40px;
+  line-height: 60px;
+  letter-spacing: -3px;
+  margin: 0; 
+  margin-top: 30px;
+}
+
+main a {
+  color: white; 
   font-style: italic;
+  background-color: black;
+  text-decoration: none;
 }
 
-/* Input section */
-.input-all {
-  background-color: #f4f4f4;
-  display: flex;
-  justify-content:flex-start;
-  align-items:center;
-  overflow-x: auto;
-  scroll-snap-type: x mandatory;
-  gap: 80px;
-  margin-bottom: 30px;
+main p {
+  margin-top: 0; 
 }
 
-.input-imgs {
+#info {
+  align-items: center;
+  justify-content: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  scroll-snap-align: start;
 }
 
-.input-imgs img {
-  width: 600px;
-  height: auto;
-}
-
-/* States section */
-.states-all {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  gap:-10px;
-}
-
-.states-all img {
-  width: 600px;
-  height: auto;
-}
-
-.states-original {
+#problems {
+  width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#problems img {
+  height: 250px;
+  margin-left: 20px;
+  margin-right: 20px;
+  width: auto;
+  border: #000 0.4px solid;
+  color: #000;
+}
+
+.problemsimgs{
+  display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin-top: 10px;
 }
 
-/* Footer */
-footer {
-  text-align: center;
-}
-
-/* Table styling */
 table {
-  font-size:10px;
-  margin: 10px auto;
+  width: 100%;
   border-collapse: collapse;
-  max-width: 1100px;
   background-color: #fff;
+  overflow: hidden;
+  font-style: normal;
+  font-family: "Instrument Sans", sans-serif;
+  font-weight: 440;
+  border: 0.2px solid #000;
+  margin-top: 15px;
+}
+
+thead {
+  background-color: #0f0f0f;
+  color: white;
+  text-align: left;
 }
 
 th, td {
-  max-width: 400px;
-  border: 0.5px solid #000;
-  padding: 8px;
-  text-align: justify;
-  text-align-last: center;
-}
-
-th.header {
-  background-color: #290f0f;
+  padding: 15px;
+  border-bottom: 1px solid #ddd;
 }
 
 th {
-  background-color: #f2f2f2;
+  font-size: 18px;
 }
 
-.info p {
-  width: 900px;
-  margin: 0 auto;
+tr:last-child td {
+  border-bottom: none;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding-left: 20px;
+}
+
+td ul li {
+  margin-bottom: 8px;
+}
+
+td:first-child {
+  background-color: #f0f0f0;
+  width: 30%;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  table {
+      width: 100%;
+  }
+
+  th, td {
+      padding: 10px;
+      font-size: 14px;
+  }
+}
+
+#visuals {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#visuals img {
+  width: 100%;
+  height: auto;
+  border:#000 0.4px solid;
+}
+
+#redesign img {
+  margin-right: 10px;
+  margin-left: 10px;
+  height: 680px;
+  width: auto;
+  border: #000 0.4px solid;
+  color: #000;
+}
+
+#redesign {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #f4f4f4;
+  color: rgb(0, 0, 0);
+  width: 100%;
+  height: 50px;
+  margin-top: 30px;
+  border-top: 0.2px solid #000;
 }
